2015-06-30  Kyle Agronick  <agronick@gmail.com>

    Packaging for inital public beta release